# MindKey

./: .gitignore  CMakeLists.txt  README.md
cmake/compiler/gcc/: settings.cmake
cmake/compiler/msvc/: settings.cmake
cmake/macros/: CheckPlatform.cmake  IncludeBoost.cmake
linux/: Makefile  README
src/: CMakeLists.txt
src/MindKey/: main.cpp  senderDaemon.cpp  senderDaemon.h
src/MindKeyServer/: mindKeyServer.cpp  mindKeyServer.h
src/capturer/: CMakeLists.txt  CapturerWin.cpp  CapturerWin.h  MindClient.cpp  MindClient.h  main.cpp  senderDaemon.cpp  senderDaemon.h
src/server/: CMakeLists.txt  MindServer.cpp  MindServer.h  PacketMgr.cpp  PacketMgr.h  main.cpp
src/shared/: CMakeLists.txt  common.cpp  common.hpp  connection.h  dataStruct.h
win/: MindKey.sln
win/MindKey/: MindKey.vcxproj  MindKey.vcxproj.filters
win/MindKeyServer/: MindKeyServer.vcxproj  MindKeyServer.vcxproj.filters
